--- a/client/src/stylesheets/Base/Base.scss
+++ b/client/src/stylesheets/Base/Base.scss
@@ -1,6 +1,8 @@
 @import './Variables.scss';
 
 body {
+    margin: 0;
+    padding: 0;
     font-family: $font-stack;
     background-color: $white;
 }
