--- a/client/src/stylesheets/Partial/Navbar.css
+++ b/client/src/stylesheets/Partial/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: #e3e7ed;
-  color: #1e1e1e;
+  color: #424242;
   border: none;
   -webkit-touch-callout: none;
   /* iOS Safari */
