--- a/client/src/stylesheets/Base/Base.css
+++ b/client/src/stylesheets/Base/Base.css
@@ -2,4 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f4f4f4; }
+  font-size: 14px;
+  background-color: #f4f4f4;
+  color: #424242; }
