--- a/client/src/stylesheets/Partial/SideNavbar.css
+++ b/client/src/stylesheets/Partial/SideNavbar.css
@@ -1,28 +1,36 @@
 .side-navbar {
   background-color: #e3e7ed;
-  float: left;
-  width: 400px; }
+  width: 330px;
+  height: 100vh; }
   .side-navbar .header {
     font-weight: bold;
-    line-height: 70px;
+    line-height: 50px;
+    width: 330px;
     background-color: #5590e8;
-    color: white;
+    color: #f4f4f4;
     -webkit-touch-callout: none;
-    /* iOS Safari */
     -webkit-user-select: none;
-    /* Safari */
     -khtml-user-select: none;
-    /* Konqueror HTML */
     -moz-user-select: none;
-    /* Firefox */
     -ms-user-select: none;
-    /* Internet Explorer/Edge */
-    user-select: none;
-    /* Non-prefixed version, currently
-                            supported by Chrome and Opera */ }
+    user-select: none; }
     .side-navbar .header .title {
       padding: 25px; }
-  .side-navbar nav {
-    padding: 0px 25px; }
-    .side-navbar nav a {
-      width: 100%; }
+  .side-navbar .algo-list {
+    line-height: 25px; }
+    .side-navbar .algo-list .algo-section {
+      float: left;
+      padding: 0 0 20px; }
+      .side-navbar .algo-list .algo-section .title {
+        float: left;
+        font-weight: bold;
+        width: 305px;
+        border-bottom: 1px solid lightgrey;
+        color: #f4f4f4;
+        margin: 0px 0 10px 0;
+        padding: 0 0 0 25px;
+        background-color: #3d3d3d; }
+      .side-navbar .algo-list .algo-section nav a {
+        margin: 0 25px;
+        float: left;
+        width: 305px; }
