--- a/client/src/stylesheets/Partial/SideNavbar.scss
+++ b/client/src/stylesheets/Partial/SideNavbar.scss
@@ -2,34 +2,55 @@
 
 .side-navbar {
     background-color: $primary-color;
-    float: left;
-    
-    width: 400px;
+    width: 330px;
+    height: 100vh;
 
     .header {
         font-weight: bold;
-        line-height: 70px;
+        line-height: 50px;
+        width: 330px;
         background-color:$accent-color;
-        color: white;
+        color: $white;
 
-        -webkit-touch-callout: none; /* iOS Safari */
-        -webkit-user-select: none; /* Safari */
-        -khtml-user-select: none; /* Konqueror HTML */
-        -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-        user-select: none; /* Non-prefixed version, currently
-                            supported by Chrome and Opera */
+        -webkit-touch-callout: none; 
+        -webkit-user-select: none;
+        -khtml-user-select: none; 
+        -moz-user-select: none; 
+        -ms-user-select: none; 
+        user-select: none; 
 
         .title {
             padding: 25px;
         }
     }
 
-    nav {
-        padding: 0px 25px;
+    .algo-list {
+        // padding: 25px;
+        line-height: 25px;
 
-        a {
-            width: 100%;
+        .algo-section {
+            float: left;
+            padding: 0 0 20px; 
+
+            .title {
+                float: left;
+                font-weight: bold;
+                width: 305px;
+                border-bottom: 1px solid lightgrey;
+                color: $white;
+                margin: 0px 0 10px 0;
+                padding: 0 0 0 25px;
+                background-color: #3d3d3d;
+            }
+    
+            nav {
+                a {
+                    margin: 0 25px;
+                    float: left;
+                    width: 305px;
+                }
+            }
         }
+        
     }
 }
