--- a/client/src/stylesheets/Partial/SideNavbar.scss
+++ b/client/src/stylesheets/Partial/SideNavbar.scss
@@ -2,13 +2,13 @@
 
 .side-navbar {
     background-color: $primary-color;
-    width: 330px;
+    width: 280px;
     height: 100vh;
 
     .header {
         font-weight: bold;
         line-height: 50px;
-        width: 330px;
+        width: 280px;
         background-color:$accent-color;
         color: $white;
 
@@ -30,24 +30,26 @@
 
         .algo-section {
             float: left;
-            padding: 0 0 20px; 
+            padding: 0 0 15px; 
 
             .title {
                 float: left;
                 font-weight: bold;
-                width: 305px;
-                border-bottom: 1px solid lightgrey;
+                width: 255px;
+                // border-bottom: 1px solid lightgrey;
                 color: $white;
                 margin: 0px 0 10px 0;
                 padding: 0 0 0 25px;
+                line-height: 30px;
                 background-color: #3d3d3d;
             }
     
             nav {
                 a {
-                    margin: 0 25px;
+                    margin: 0 10px 0 0;
+                    padding: 0 0 0 25px;
                     float: left;
-                    width: 305px;
+                    width: 255px;
                 }
             }
         }
