--- a/client/src/stylesheets/Stylesheet.css
+++ b/client/src/stylesheets/Stylesheet.css
@@ -31,12 +31,12 @@ body {
 
 .side-navbar {
   background-color: #e3e7ed;
-  width: 330px;
+  width: 280px;
   height: 100vh; }
   .side-navbar .header {
     font-weight: bold;
     line-height: 50px;
-    width: 330px;
+    width: 280px;
     background-color: #5590e8;
     color: #f4f4f4;
     -webkit-touch-callout: none;
@@ -51,17 +51,18 @@ body {
     line-height: 25px; }
     .side-navbar .algo-list .algo-section {
       float: left;
-      padding: 0 0 20px; }
+      padding: 0 0 15px; }
       .side-navbar .algo-list .algo-section .title {
         float: left;
         font-weight: bold;
-        width: 305px;
-        border-bottom: 1px solid lightgrey;
+        width: 255px;
         color: #f4f4f4;
         margin: 0px 0 10px 0;
         padding: 0 0 0 25px;
+        line-height: 30px;
         background-color: #3d3d3d; }
       .side-navbar .algo-list .algo-section nav a {
-        margin: 0 25px;
+        margin: 0 10px 0 0;
+        padding: 0 0 0 25px;
         float: left;
-        width: 305px; }
+        width: 255px; }
