--- a/client/src/stylesheets/Partial/SideNavbar.scss
+++ b/client/src/stylesheets/Partial/SideNavbar.scss
@@ -1,33 +1,27 @@
 @import './../Base/Variables.scss';
 
 .side-navbar {
-    background-color: $primary-color;
+    background-color: $black;
     width: 280px;
     height: 100vh;
-
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none;
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
     .header {
-        font-weight: bold;
-        line-height: 50px;
+        line-height: 34px;
         width: 280px;
-        background-color:$accent-color;
+        background-color: $black;
         color: $white;
 
-        -webkit-touch-callout: none; 
-        -webkit-user-select: none;
-        -khtml-user-select: none; 
-        -moz-user-select: none; 
-        -ms-user-select: none; 
-        user-select: none; 
-
         .title {
-            padding: 25px;
+            padding: 15px;
         }
     }
 
     .algo-list {
-        // padding: 25px;
-        line-height: 25px;
-
         .algo-section {
             float: left;
             padding: 0 0 15px; 
@@ -36,12 +30,14 @@
                 float: left;
                 font-weight: bold;
                 width: 255px;
-                // border-bottom: 1px solid lightgrey;
                 color: $white;
-                margin: 0px 0 10px 0;
                 padding: 0 0 0 25px;
-                line-height: 30px;
-                background-color: #3d3d3d;
+                line-height: 24px;
+                background-color: darken($black, 5%);
+
+                &:hover{
+                    background-color: darken($black, 10%);
+                }
             }
     
             nav {
@@ -50,6 +46,12 @@
                     padding: 0 0 0 25px;
                     float: left;
                     width: 255px;
+                    line-height: 24px;
+                    color: $white;
+
+                    &:hover {
+                        background-color: darken($black, 10%);
+                    }
                 }
             }
         }
